test/libsolidity/syntaxTests/constructor/two_constructors.sol
contract test {
	constructor(uint) { }
	constructor() {}
}
// ----
// DeclarationError 7997: (40-56='constructor() {}'): More than one constructor defined.
